CYS: Fix tooltip overlap with pattern (#49700)
* CYS: Fix tooltip overlap with pattern

* Add changefile(s) from automation for the following project(s): woocommerce

* Add changefile(s) from automation for the following project(s): woocommerce

---------

--- a/plugins/woocommerce-admin/client/customize-store/assembler-hub/sidebar/pattern-screen/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/assembler-hub/sidebar/pattern-screen/style.scss
@@ -9,6 +9,10 @@
 	padding: 16px 24px 24px 24px;
 	overflow: auto;
 
+	.block-editor-block-preview__container {
+		margin-bottom: 2px;
+	}
+
 	.woocommerce-customize-store-edit-site-layout__sidebar-extra__pattern__header {
 		display: flex;
 		align-items: center;
